projects/ngx-uic/select/src/components/select/select.component.scss
:host ::ng-deep {
    [ngxpopup] {
        overscroll-behavior: contain;
        position: fixed;
        position-area: bottom;
        position-try:
            bottom, bottom left, bottom right,
            top, top left, top right,
            left, right;

        &::backdrop {
            background: transparent;
            overflow: hidden;
            overscroll-behavior: contain;
        }
    }
}

